# repman

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-aarch64  Dockerfile-x86_64  Makefile  PKGBUILD  README.adoc  README.md  REUSE.toml  clippy.toml  repman-all
.reuse/: dep5
cfg/: repman.conf
ci/: gitlab-ci.aarch64.yml  gitlab-ci.x86_64.yml  rm_from_docker_hub.sh
doc/: manpage.adoc
src/: cli.rs  main.rs
src/internal/: api.rs  aur.rs  cfg.rs  common.rs  deps.rs  mod.rs  pkg.rs  pkgbuild.rs  repo.rs  server.rs
src/internal/server/: file.rs  mod.rs  rsync.rs
templates/: Dockerfile
