[package]
edition = "2021"
authors = [ "Michael Picht <mipi@fsfe.org>"]
license = "GPL-3.0-or-later"
name = "repman"
version = "0.6.9"
description = "repman helps to manage custom repositories for Arch Linux packages"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = "2"
anyhow = "1"
arch_msgs = "0.2"
clap = { version = "4", features = [ "derive" ] }
const_format = "0.2"
dialoguer = "0.11"
dirs = "5"
duct = "0.13"
glob = "0.3"
indoc = "2"
lazy_static = "1" 
once_cell = "1"
regex = "1"
repodb_parser = "0.2"
reqwest = { version = "0.11", features = ["blocking","json"] }
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sudo = "0.6"
toml = "0.8"
url = "2"