[package]
name = "repman"
version = "0.7.9"
authors = ["Michael Picht <mipi@fsfe.org>"]
license = "GPL-3.0-or-later"
description = "repman helps to manage custom repositories for Arch Linux packages"
readme = "README.md"
homepage = "https://gitlab.com/mipimipi/repman"
repository = "https://gitlab.com/mipimipi/repman"
keywords = ["cli", "archlinux", "aur-helper", "repository-mgmt", "arch-linux"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = { version = "4", features = [
    "generate",
] } # Workaround (see https://github.com/archlinux/alpm.rs/issues/35, requires clang)
anyhow = "1"
arch_msgs = "0.2"
cached = "0.53"
clap = { version = "4", features = ["derive"] }
const_format = "0.2"
dialoguer = "0.11"
dirs = "5"
duct = "0.13"
glob = "0.3"
indoc = "2"
lazy_static = "1"
once_cell = "1"
regex = "1"
repodb_parser = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sudo = "0.6"
toml = "0.8"
url = "2"
